# ColorGradingRenderer

./: .gitignore  CMakeLists.txt  README.md  main.cpp  renderer.hpp  shader.hpp
assets/shader/: fragment.fsh  vertex.vsh
