cmake_minimum_required(VERSION 3.19)
project(ColorGradingRenderer)
set(CMAKE_CXX_STANDARD 20)
add_executable(${PROJECT_NAME} main.cpp shader.hpp renderer.hpp)
set(CMAKE_EXE_LINKER_FLAGS "-framework Cocoa -framework OpenGL -framework IOKit -framework CoreVideo -framework CoreFoundation")
set(CMAKE_CXX_FLAGS "-Wall")
add_subdirectory(thirdparty/glad)
add_subdirectory(thirdparty/glfw-3.3.7.bin.MACOS)
add_subdirectory(thirdparty/nothings)
add_subdirectory(thirdparty/json)
add_custom_target(copy_assets COMMAND ${CMAKE_COMMAND} -P ${CMAKE_CURRENT_LIST_DIR}/copy-assets.cmake)
add_dependencies(${PROJECT_NAME} copy_assets)
target_link_libraries(${PROJECT_NAME} PRIVATE glfw3 glad nothings json)